changed paragraph to joke

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/menu.css">
-    <link rel="stylesheet" href="pages/home.html">
-    <link rel="stylesheet" href="pages/services.html">
-    <link rel="stylesheet" href="pages/aboutus.html">
-    <link rel="stylesheet" href="pages/contactus.html">
+    <link rel="pages" href="pages/home.html">
+    <link rel="pages" href="pages/services.html">
+    <link rel="pages" href="pages/aboutus.html">
+    <link rel="pages" href="pages/contactus.html">
     <link rel="imgs" href="img/">
     <title>ALE Cleaning</title>
 </head>
@@ -21,10 +21,10 @@
             <div>
                 <div>
                     <ul>
-                        <li><a href="pages/home.html"></a>Home</li>
-                        <li><a href="pages/services.html"></a>Services</li>
-                        <li><a href="pages/aboutus.html"></a>About Us</li>
-                        <li><a href="pages/contactus.html"></a>Contact Us</li>
+                        <li><a href="pages/home.html">Home</a></li>
+                        <li><a href="pages/services.html">Services</a></li>
+                        <li><a href="pages/aboutus.html">About Us</a></li>
+                        <li><a href="pages/contactus.html">Contact Us</a></li>
                     </ul>
                 </div>
             </div>
@@ -34,7 +34,8 @@
     <header class="showcase">
         <div class="container showcase-inner">
             <h1>Welcome</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae veritatis distinctio tenetur repellat! Iste voluptas culpa dolores accusantium, quisquam delectus.</p>
+            <p>Programming is like sex:
+                One mistake and you have to support it for the rest of your life.</p>
             <a href="pages/aboutus.html" class="btn">Read More</a>
         </div>
     </header>
